# python_project_structure

./: LICENSE  README.md  pyproject.toml
src/packagename/: main.py
src/packagename.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/packagename/mod1/: add.py
test/: test_add.py
